# glarens

./: .gitignore  CDD.md  CMakeLists.txt  CMakePresets.json  README.md
cmake/: CompileShader.cmake  GlarensConfig.cmake.in
examples/: CMakeLists.txt
examples/dummy/: dummy.cpp  dummy.hpp  main.cpp
examples/dummy/assets/shaders/: shader.vert.hlsl
include/glarens/: glarens.hpp  layout.hpp  math.hpp  node.hpp  property.hpp
src/: glarens.cpp  node.cpp
src/internal/: app-data.hpp  utils.hpp
tests/: CMakeLists.txt
tests/dummy/: dummy.cpp  main.cpp
